<resources>
    <!---Home Screen-->
    <string name="app_name">PlanIt</string>
    <string name="Date">February 27</string>
    <string name="DayOfWeek">Thursday</string>
    <string name="event_1">• blah blah</string>
    <string name="location_1"> @Conco </string>
    <string name="time_1">2:45</string>

    <string name="nav_today">Today</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_add">+</string>

    <!---Calender Screen-->
    <string name="occassion">Occassions</string>
    <string name="O_event_1">• blah blah</string>
    <string name="O_DayOfWeek">Th</string>
    <string name="O_time_1">2:45</string>

    <!---Add events Screen-->
    <string name="addTitle">Title</string>
    <string name="addCategory">Categories</string>
    <string name="addStart">Start</string>
    <string name="addEnd">End</string>
    <string name="addRemind">Reminder</string>
    <string name="addImportance">Importance</string>
    <string name="addReccuring">Recurring</string>
    <string name="addLocation">Location</string>
    <string name="addDesc">Description (optional)</string>

    <string name="submit">Create</string>
    <string name="submitEdit">Edit</string>

</resources>